# Houdini-NvFlex

./: .gitignore  CMakeLists.txt  Makefile  README.md  windowsbuild.bat
nvFlexDop/: SIM_NvFlexData.cpp  SIM_NvFlexData.h  SIM_NvFlexSolver.cpp
nvFlexDop/samples/: Constraint_objects_Workflow.hiplc  Constraint_objects_Workflow2.hiplc  New_Separated_Constraint_Workflow.hiplc
nvFlexDop/samples/backup/: New_Separated_Constraint_Workflow_bak1.hiplc
package/NvFlexDop/: nvFlex.json
package/NvFlexDop/otls/: dop_nvflex_apply_pop_force.hdalc  dop_nvflex_fluid_emitter.hdalc  dop_nvflex_object.hdalc  dop_nvflex_solver.hdalc  nvflex_Recipes.hdalc  nvflex_dopobject.hda  nvflex_dopsolver.hda  nvflex_makecloth.hda  nvflex_makesoftbody.hda  nvflex_pack.hda  nvflex_unpack.hda  sop_nvflex_configure_cloth.hdalc  sop_nvflex_configure_fluid.hdalc  sop_nvflex_configure_rigid.hdalc  sop_nvflex_configure_ropes.hdalc  sop_nvflex_configure_softbody.hdalc  sop_nvflex_pack.hdalc  sop_nvflex_solver.hdalc  sop_nvflex_unpack.hdalc
package/NvFlexDop/otls/backup/: nvflex_makesoftbody_bak2.hda
